 parameterparse.py         Locally Added               0 
 parameter_parser.py       Locally Added               0 
 parameter_substitution.awb Locally Added               0 
 parameter.py              Locally Added               0 

Directory modules/leap/build-support/build-pipelines/pipelines/fpga
 fpga-build-pipeline.awb   Locally Modified          425 

Directory modules/leap/build-support/project
 ModuleList.py             Locally Modified          425 


1) Changed tree build to support wrapper modules in the style of the other synthesis boundaries. Top level build now gets re-synthesized _only_ if top level connections change, as opposed to when the interface of some module changes. 

2) To support this we needed a means of introducing LI modules into the compilation flow at compile time.  This is now supported.  Refactoring was required in both the synthesis and bluespec build tools.

Both of these changes are steps on the road to a more general latency insensitive compiler. 

----------
mcadler     Date: Mon May 13 16:57:16 EDT 2013  CSN: CSN-leap-427
                  Mon May 13 20:57:16 UTC 2013


Directory modules/leap/build-support/project
 Utils.py                  Locally Modified          426 
 SCons.top.pipeline.template Locally Modified          426 

getBluespecVersion() was invoking Bluespec on every call instead of caching
the answer.  We call this a lot.  Doh!

Add a few SCons options to speed up dependence analysis.

----------
mcadler     Date: Mon May 13 18:56:43 EDT 2013  CSN: CSN-leap-428
                  Mon May 13 22:56:43 UTC 2013


Directory modules/leap/build-support/build-pipelines/stages/bluespec
 BSV.py                    Locally Modified          427 

Calling getBuildPipelineDebug inside a Python build action function causes
SCons to believe the action changes each compilation.  I'm not sure why.
Replaced the calls with a variable set outside the build action, which is
faster anyway.