@@ -51,13 +51,13 @@ class Module(ProjectDependency.ProjectDependency):
     # have simply linked to /dev/null, but tar --dereference simply eliminates
     # files linked to /dev/null.  We sometimes want to tar a build tree and
     # send it to Bluespec.
-    hw_path = 'hw/include/awb/provides/EMPTY_params_override.bsh'
-    if not os.path.exists(hw_path):
-      f = open(hw_path, 'w')
+    empty_path = 'hw/include/awb/provides/EMPTY_params_override.bsh'
+    if not os.path.exists(empty_path):
+      f = open(empty_path, 'w')
       f.close()
-    sw_path = 'sw/include/awb/provides/EMPTY_params_override.h'
-    if not os.path.exists(sw_path):
-      f = open(sw_path, 'w')
+    empty_path = 'sw/include/awb/provides/EMPTY_params_override.h'
+    if not os.path.exists(empty_path):
+      f = open(empty_path, 'w')
       f.close()
 
 
@@ -79,12 +79,6 @@ class Module(ProjectDependency.ProjectDependency):
     hw_path = 'hw/include/awb/provides/' + self.name + '_params_override.bsh'
     sw_path = 'sw/include/awb/provides/' + self.name + '_params_override.h'
 
-    if emitOverrideFiles:
-      if os.path.exists(hw_path):
-        os.unlink(hw_path)
-      if os.path.exists(sw_path):
-        os.unlink(sw_path)
-
     try:
       p = __import__(self.name + '.config')
 
@@ -100,7 +94,7 @@ class Module(ProjectDependency.ProjectDependency):
           # Generate the header files if this is the first override
           # for the module.
           if not found_override:
-            found_override = self.initOverrideFile()
+            found_override = self.initOverrideFiles(hw_path, sw_path)
 
           # Replace the old value with the new one
           p.config.awbParams[k] = new_val
@@ -113,17 +107,39 @@ class Module(ProjectDependency.ProjectDependency):
       params = {}
 
     if not found_override and emitOverrideFiles:
-      os.symlink('EMPTY_params_override.bsh', hw_path)
-      os.symlink('EMPTY_params_override.h', sw_path)
+      self.linkToEmptyOverrideFile('EMPTY_params_override.bsh', hw_path)
+      self.linkToEmptyOverrideFile('EMPTY_params_override.h', sw_path)
 
     return params
 
 
   ##
-  ## initOverrideFile --
+  ## linkToEmptyOverrideFile --
+  ##   For files with no overrides we link to an empty file instead of generating
+  ##   a unique empty file for each module.  This reduces file caching pressure.
+  ##
+  def linkToEmptyOverrideFile(self, empty_path, path):
+    # Already exists from last build?
+    if os.path.lexists(path):
+      # Empty?  If not, it is wrong.
+      st_size = 1
+      try:
+        st_size = os.stat(path).st_size
+      except:
+        None
+
+      if st_size > 0:
+        os.unlink(path)
+        os.symlink(empty_path, path)
+    else:
+      os.symlink(empty_path, path)
+
+
+  ##
+  ## initOverrideFiles --
   ##   Initialize override include files for a single module.
   ##
-  def initOverrideFile(self):
+  def initOverrideFiles(self, hw_path, sw_path):
     if not emitOverrideFiles:
       return False
 
@@ -134,13 +150,21 @@ class Module(ProjectDependency.ProjectDependency):
       return False
 
     # Generate parameter override header files
-    param_bsh = open('hw/include/awb/provides/' + self.name + '_params_override.bsh', 'w')
+    try:
+      os.unlink(hw_path)
+    except:
+      None
+    param_bsh = open(hw_path, 'w')
     param_bsh.write('//\n')
     param_bsh.write('// AWB parameter overrides generated by Module.py Python build rules\n')
     param_bsh.write('//\n\n')
     param_bsh.close()
 
-    param_h = open('sw/include/awb/provides/' + self.name + '_params_override.h', 'w')
+    try:
+      os.unlink(sw_path)
+    except:
+      None
+    param_h = open(sw_path, 'w')
     param_h.write('//\n')
     param_h.write('// AWB parameter overrides generated by Module.py Python build rules\n')
     param_h.write('//\n\n')
